# cubecalc-ui

./: .envrc  .gitignore  .gitmodules  CONTRIBUTING.md  README.org  WAIVER  flake.nix  overlay.nix
.github/workflows/: deploy.yml
resources/: cubecalc-ui.desktop
src/: appimage.sh  build.sh  cachix-push.sh  common.c  cubecalc.c  cubecalc.proto  cubecalc.rc  debug.c  examples.c  generate_c.py  generated.c  glue.py  glue_common.py  graph.c  graphcalc.c  humanize.c  i686-w64-llvm-mingw32.cmake  i686-w64-llvm-mingw32.txt  index.html  init.py  main.c  meson.build  meson_options.txt  microshaft_wangblows.c  multithread.c  nuklear.c  nuklear.h  publish.sh  serialization.c  utils.c  windows-build.sh  x86_64-w64-llvm-mingw32.cmake  x86_64-w64-llvm-mingw32.txt  x86_64-w64-mingw32.txt
src/compilation-units/: README.md  cubecalc_impl.c  generated_impl.c  graph_impl.c  graphcalc_impl.c  humanize_impl.c  monolith.c  multithread_impl.c  nuklear_impl.c  serialization_impl.c  utils_impl.c
src/proto/: cubecalc.pb-c.c  cubecalc.pb-c.h
src/resources/: README.md
