option('enable-threads', type : 'boolean', value : true, description : 'enable multithreading (no-op on emscripten)')
option('debug-output', type : 'boolean', value : false, description : 'enable debug output (and console on desktop)')

option(
  'build-config',
  type : 'combo',
  value : 'default',
  description : 'os-specific build configuration',
  choices: ['default', 'mingw'],
)
